--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@tauri-apps/api": "^2.0.0-beta.0",
-    "@tauri-apps/plugin-shell": "^2.0.0-beta.0"
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.0",
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
